<resources>
    <string name="app_name">Converter</string>
    <string name="conversion_select">Conversion:</string>
    <string name="miles_to_kilometers">Miles to Kilometers</string>
    <string name="kilometers_to_miles">Kilometers to Miles</string>
    <string name="kilometers_value">Kilometers Value:</string>
    <string name="miles_value">Miles Value:</string>
    <string name="convert">convert</string>
    <string name="conversion_history">Conversion History:</string>
    <string name="clear">clear</string>
    <string name="enter_value">Enter Value!</string>
</resources>